# axum-askama

./: Cargo.toml
migrations/: 20241225044653_create_user_table.sql
src/: init.rs  main.rs  routes.rs
src/data/: user.rs
src/handlers/: auth.rs  errors.rs  public.rs  todos.rs
src/models/: templates.rs  user_form_model.rs
static/css/: auth.css  global.css  todo.css
templates/: index.html
templates/pages/: create.html  home.html  log-in.html  not-found.html  server-error.html  sign-up.html  todos.html
templates/partials/: navigation.html
