[package]
name = "axum-askama"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
askama = "0.12.1"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.216", features = ["derive"] }
validator = { version = "0.19.0", features = ["derive"] }
